--- a/EmojiRating/index.css
+++ b/EmojiRating/index.css
@@ -49,3 +49,11 @@ body{
 .fa-star.active{
     color: gold;
 }
+
+.exp{
+    /* border: 2px solid red; */
+    position: absolute;
+    left: 172px;
+    top: 98px;
+    font-size: 1.3rem;
+}
